# rust-rdp

./: .gitignore  Cargo.toml  LICENSE  README.md  README.vi.md  build-desktop.sh  build-dev.sh  build-release.sh  generate_icon.py
android/: settings.gradle.kts
android/app/: build.gradle.kts  release.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rustai/rdp/: MainActivity.kt  RdpClient.kt  RdpState.kt
android/app/src/main/res/values/: themes.xml
desktop/: Cargo.toml
desktop/assets/: io.github.manhavn.rust-rdp-vnc.desktop  io.github.manhavn.rust-rdp.desktop
desktop/assets/screenshots/: demo.webm
desktop/src/: keys.rs  main.rs
flatpak/: README.md  README.vi.md  io.github.manhavn.rust-rdp-vnc.desktop  io.github.manhavn.rust-rdp-vnc.flathub.yml.template  io.github.manhavn.rust-rdp-vnc.metainfo.xml  io.github.manhavn.rust-rdp-vnc.yml  io.github.manhavn.rust-rdp.desktop  io.github.manhavn.rust-rdp.flathub.yml.template  io.github.manhavn.rust-rdp.metainfo.xml  io.github.manhavn.rust-rdp.yml
rust_rdp/: Cargo.toml
rust_rdp/src/: android_jni.rs  callback.rs  lib.rs
scripts/: publish-flathub-podman.sh  publish-flatpak.sh  publish-snap.sh
snap/: README.md  README.vi.md  snapcraft.yaml
snap/gui/: rust-rdp-vnc.desktop  rust-rdp.desktop
