[package]
name = "rust-rdp-desktop"
version = "0.1.0"
edition = "2021"
description = "Rust RDP VNC — Linux desktop RDP/VNC client powered by the rust_rdp core"

[[bin]]
name = "rust-rdp"
path = "src/main.rs"

[dependencies]
rust_rdp = { path = "../rust_rdp" }
eframe = { version = "0.31", default-features = true }
egui = "0.31"
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
directories = "5"
rfd = "0.15"
