[package]
name = "rust_rdp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_rdp"
crate-type = ["cdylib", "rlib"]

[features]
default = []
android = ["dep:jni", "dep:android_logger"]

[dependencies]
jni = { version = "0.21", optional = true }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
ironrdp-connector = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439" }
ironrdp-tokio = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439" }
ironrdp-async = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439" }
ironrdp-pdu = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439" }
ironrdp-graphics = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439" }
lazy_static = "1.4"
log = "0.4"
android_logger = { version = "0.13", optional = true }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
picky = "7.0.0-rc.22"
ironrdp-core = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439" }
ironrdp-dvc = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439" }
ironrdp-egfx = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439", features = ["openh264-bundled"] }
ironrdp-svc = { git = "https://github.com/Devolutions/IronRDP.git", rev = "9cb5439" }
anyhow = "1.0"
vnc-rs = "*"
